<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="mycard">My Card</string>
    <string name="crash_title">应用程序崩溃</string>
    <string name="crashed">w(ﾟДﾟ)w.. 萌卡崩溃啦！</string>
    <string name="crash_dialog_comment_prompt">萌卡崩溃了喵，错误日志在您点击确定之后将会发送给俺们喵，有其他想法可以在下面反馈喵!</string>
    <string name="crash_dialog_ok_toast">感谢喵!</string>
    <string name="room_list">Rooms</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_reset">Reset</string>
    <string name="action_play">Play</string>
    <string name="action_new_room">New room</string>
    <string name="action_support">Support us</string>
    <string name="quick_join">Quick join</string>
    <string name="create_room">Create room</string>
    <string name="room_password">Room password</string>
    <string name="show_password">Show password</string>
    <string name="card_limit">卡片允许</string>
    <string name="duel_mode">决斗模式</string>
    <string name="life_point_hint">Life point</string>
    <string name="room_name">Room name</string>
    <string name="init_lp">初始LP</string>
    <string name="init_hands">初始手牌数</string>
    <string name="draw_count">每回合抽卡</string>
    <string name="room_advanced_options">Advanced options</string>
    <string name="duel_info">决斗信息</string>
    <string name="duel_options">决斗选项</string>
    <string name="quick_join_hint">Room name$password</string>
    <string name="input_invalid_msg">Sum of room name and password cannot exceed <xliff>%1$d</xliff> characters</string>
    <string name="item_name_text">名称：</string>
    <string name="item_level_text">星级：</string>
    <string name="item_race_text">种族：</string>
    <string name="item_attr_text">属性：</string>
    <string name="item_atk_text">攻击力：</string>
    <string name="item_def_text">防御力：</string>
    
    <string name="button_update">Update</string>
    <string name="button_create">Create</string>
    <string name="button_join">Join</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="refresh_texture">R</string>
    <string name="ignore_chain">S</string>
    <string name="react_chain">A</string>
    <string name="combobox_choose_item">请选择一项</string>
    <string name="loading">Loading</string>
    <string name="ongoing">Ongoing</string>
    <string name="pending">Pending</string>
    <string name="quick_join_error">Cannot find room</string>
    <string name="login">Login</string>
    <string name="logout">log out</string>
    <string name="sign_up">Sign up</string>
    <string name="login_sign_up">Login/Sign up</string>
    <string name="logging">Loging in</string>
    <string name="login_failed">Login failed</string>
    <string name="personal_center">Personal center</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="action_filter">筛选</string>
    <string name="action_filter_none">（无）</string>
    <string name="action_filter_string_type">种类</string>
    <string name="action_filter_string_race">种族</string>
    <string name="action_filter_string_property">属性</string>
    <string name="action_filter_string_ot">归属</string>
    <string name="action_filter_string_more">更多</string>
    <string name="action_filter_type_spell">魔法</string>
    <string name="action_filter_type_spell_normal">通常</string>
    <string name="action_filter_type_spell_quick_play">速攻</string>
    <string name="action_filter_type_spell_ritual">仪式</string>
    <string name="action_filter_type_spell_equip">装备</string>
    <string name="action_filter_type_spell_field">场地</string>
    <string name="action_filter_type_spell_continuous">永续</string>
    <string name="action_filter_type_trap">陷阱</string>
    <string name="action_filter_type_trap_normal">通常</string>
    <string name="action_filter_type_trap_continuous">永续</string>
    <string name="action_filter_type_trap_counter">反击</string>
    <string name="action_filter_type_monster">怪物</string>
    <string name="action_filter_type_monster_normal">通常</string>
    <string name="action_filter_type_monster_effect">效果</string>
    <string name="action_filter_type_monster_fusion">融合</string>
    <string name="action_filter_type_monster_ritual">仪式</string>
    <string name="action_filter_type_monster_synchro">同调</string>
    <string name="action_filter_type_monster_xyz">超量</string>
    <string name="action_filter_type_monster_tunner">调整</string>
    <string name="action_filter_type_monster_gemini">二重</string>
    <string name="action_filter_type_monster_union">同盟</string>
    <string name="action_filter_type_monster_spirit">灵魂</string>
    <string name="action_filter_type_monster_flip">反转</string>
    <string name="action_filter_type_monster_toon">卡通</string>
    <string name="action_filter_type_monster_pendulum">摇摆</string>
    
    <string name="action_filter_property_land">地</string>
    <string name="action_filter_property_water">水</string>
    <string name="action_filter_property_hot">炎</string>
    <string name="action_filter_property_wind">风</string>
    <string name="action_filter_property_light">光</string>
    <string name="action_filter_property_dark">暗</string>
    <string name="action_filter_property_god">神</string>
    <string name="action_filter_race_warrior">战士</string>
    <string name="action_filter_race_magic">魔法使</string>
    <string name="action_filter_race_angel">天使</string>
    <string name="action_filter_race_devil">恶魔</string>
    <string name="action_filter_race_ud">不死</string>
    <string name="action_filter_race_machanical">机械</string>
    <string name="action_filter_race_land">地</string>
    <string name="action_filter_race_water">水</string>
    <string name="action_filter_race_hot">炎</string>
    <string name="action_filter_race_rock">岩石</string>
    <string name="action_filter_race_birds">鸟兽</string>
    <string name="action_filter_race_plant">植物</string>
    <string name="action_filter_race_insect">昆虫</string>
    <string name="action_filter_race_thunder">雷</string>
    <string name="action_filter_race_dragon">龙</string>
    <string name="action_filter_race_orc">兽</string>
    <string name="action_filter_race_orc_warrior">兽战士</string>
    <string name="action_filter_race_dinosaur">恐龙</string>
    <string name="action_filter_race_fish">鱼</string>
    <string name="action_filter_race_sea_otter">海龙</string>
    <string name="action_filter_race_reptile">爬虫</string>
    <string name="action_filter_race_telekenesis">念动力</string>
    <string name="action_filter_race_devine_beast">幻神兽</string>
    <string name="action_filter_race_bramna">创造神</string>
    <string name="action_filter_race_phantom_dragon">幻龙</string>
    
    <string name="action_filter_ot_ocg">OCG</string>
    <string name="action_filter_ot_tcg">TCG</string>
    <string name="action_filter_ot_ocgtcg">OCG/TCG</string>
    
    <string name="action_filter_atk">攻击力</string>
    <string name="action_filter_def">防御力</string>
    <string name="card_search_hint">请输入卡片名称或者代码</string>
    
    <string name="action_filter_level">星等</string>
    <string name="action_filter_effect">效果</string>
    
    <string name="settings_common">Common settings</string>
    <string name="settings_game">Game settings</string>
    <string name="settings_about">About</string>
    <string name="donate">Donate</string>
    <string name="support_us_des">萌卡属于非盈利项目，依靠众人的捐助维持运作。如果您可以提供捐助帮助服务持续运行，我们将不胜感激。</string>
    <string name="support_via">您可以通过以下方式对我们进行捐助：</string>
    <string name="support_extra">如果这不是您的常用设备，您也可以用其他手机扫描下面二维码进行捐助；</string>
    <string name="support_method_alipay_wap">通过wap网页进行捐助</string>
    <string name="support_method_alipay_mobile_installed">通过手机钱包进行捐助</string>
    <string name="support_method_alipay_mobile_not_installed">提示下载手机钱包后进行捐助</string>
    <string name="settings_common_sub_common">Common</string>
    <string name="settings_common_card_image_network_pref">Do not download card images while on mobile data plan</string>
    <string name="settings_game_card_quality">Card image quality</string>
    <string name="settings_game_card_path">Card image save path</string>
    <string name="settings_game_font_path">Game font path</string>
    <string name="settings_game_opengl">OpenGL</string>
    
    <string name="login_hint_not_logged_in">&lt;p>请&lt;a href="login">&lt;u>登录&lt;/u>&lt;/a>后以查看决斗房间列表哦，或者切换到&lt;a href="freemode">&lt;u>自由连接&lt;/u>&lt;/a>模式喵&lt;/p></string>
    
    <string name="server_name">名称：</string>
    <string name="server_ip">IP地址:</string>
    <string name="server_port">端口:</string>
    <string name="action_new_server">添加服务器</string>
    <string name="action_edit_server">编辑服务器</string>
    
    <string name="action_delete">删除</string>
    <string name="action_edit">编辑</string>
    <string name="action_connect">连接</string>
    
    <string name="toast_delete">已删除 %1$s</string>
    
    <!-- 下载任务Toast -->
    <string name="toast_start_to_download">%1$s开始下载</string>
    <string name="notification_labels_spilit">、</string>
    <string name="app_is_downloading">%1$d款应用正在下载</string>
    <string name="app_down_success">%1$s下载完成</string>
    <string name="click_to_install">点击安装软件</string>
    <string name="new_client_version">萌卡有新版本啦！</string>
    <string name="toast_download_installing">%1$s正在安装</string>
    <string name="toast_download_failed">%1$s下载失败</string>
    <string name="toast_download_success">%1$s下载完成</string>
    <string name="toast_already_added_to_download">%1$s已加入下载任务</string>
    <string name="clear_cache_completed">已清除缓存与本地安装包</string>
    <string name="exit_hint">"再按一次退出萌卡喵！"</string>
</resources>
