<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <Preference 
        android:title="@string/settings_common">
        <intent 
            android:targetPackage="org.mycard"
            android:targetClass="org.mycard.SettingsActivity"
            android:action="org.mycard.prefs.PREFS_COMMON" />
    </Preference>
    <Preference 
        android:title="@string/settings_game">
        <intent 
            android:targetPackage="org.mycard"
            android:targetClass="org.mycard.SettingsActivity"
            android:action="org.mycard.prefs.PREFS_GAME" />
    </Preference>
    <Preference 
        android:title="@string/settings_about"
        android:summary="@string/mycard" >
        <intent 
            android:targetPackage="org.mycard"
            android:targetClass="org.mycard.SettingsActivity"
            android:action="org.mycard.prefs.PREFS_ABOUT" />
    </Preference>
</PreferenceScreen>
