<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/card_image"
        android:layout_width="@dimen/card_thumbnail_width"
        android:layout_height="@dimen/card_thumbnail_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_level_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/item_level"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/item_race_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/item_race"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/item_attr_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/item_attr"
                android:layout_width="12dp"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/item_atk_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/item_atk"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/item_def_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/item_def"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>